--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-google-places-autocomplete": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.0.1",
     "react-native-paystack-webview": "^3.2.0",
     "react-native-push-notification": "^5.0.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-safe-area-view": "^1.1.1",
