--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyC3ko1LbjiRt8klPzj3xZaJMQnnf42i0VQ"/>
+   
+      <!-- You will also only need to add this uses-libray tag -->
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
