--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-google-places-autocomplete": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.27.1",
     "react-native-paper": "^4.0.1",
     "react-native-paystack-webview": "^3.2.0",
     "react-native-push-notification": "^5.0.1",
