--- a/ios/swift_logistics/Info.plist
+++ b/ios/swift_logistics/Info.plist
@@ -39,6 +39,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is needed so as to get the user's current Location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location is needed so as to get the user's current Location in realtime</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location is needed so as to get the user's current Location everytime</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
