--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-google-places-autocomplete": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
